--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -282,13 +282,10 @@
   <data name="Backup_Custom" xml:space="preserve">
     <value>דפי אינטרנט מותאמים אישית גיבוי</value>
   </data>
-  <data name="Backup_Data" xml:space="preserve">
-    <value>קובצי נתונים גיבוי</value>
-  </data>
   <data name="Backup_Databases" xml:space="preserve">
     <value>מאגרי גיבוי</value>
   </data>
-  <data name="Backup_Data_Files" xml:space="preserve">
+  <data name="Backup_Data_Files_word" xml:space="preserve">
     <value>קובצי נתונים גיבוי</value>
   </data>
   <data name="Backup_Folder" xml:space="preserve">
@@ -447,6 +444,9 @@
   <data name="Check_for_Updates_word" xml:space="preserve">
     <value>בדוק עדכונים</value>
   </data>
+  <data name="Choose_a_Folder_word" xml:space="preserve">
+    <value>בחר תיקייה</value>
+  </data>
   <data name="Choose_Cache" xml:space="preserve">
     <value>בחר אילו מטמון לרוקן</value>
   </data>
@@ -502,7 +502,7 @@
     <value>לחץ כדי להפעיל או להפסיק חזק</value>
   </data>
   <data name="ClickStartStoptxt" xml:space="preserve">
-    <value>אזורים עשויה להתחיל או להפסיק בקבוצות, תלוי כמה אזורים שלך תיקייה מאורגנת.</value>
+    <value>אזורים עשויים להתחיל או להפסיק בקבוצות, תלוי כמה האזורים שלך תיקייה מאורגן.</value>
   </data>
   <data name="Click_2_Choose" xml:space="preserve">
     <value>לחץ כדי לבחור קבוצה</value>
@@ -622,7 +622,7 @@
     <value>צור חשבון הפקה</value>
   </data>
   <data name="Create_DB" xml:space="preserve">
-    <value>יצירת מאגר נתונים חדש, ריק</value>
+    <value>יצירת מסד נתונים חדש, ריק</value>
   </data>
   <data name="Create_Sandbox_word" xml:space="preserve">
     <value>צור ארגז חול</value>
@@ -771,10 +771,10 @@
   <data name="DreamGrid_word" xml:space="preserve">
     <value>DreamGrid</value>
   </data>
-  <data name="DynDNS" xml:space="preserve">
-    <value>DynDNS רישום כתובת</value>
+  <data name="Dynamic_DNS_word" xml:space="preserve">
+    <value>כתובת דינמית DNSRegistering DynDNS</value>
   </data>
-  <data name="DynDNS_password_word" xml:space="preserve">
+  <data name="DynDNS" xml:space="preserve">
     <value>סיסמא DynDNS</value>
   </data>
   <data name="EditRegion" xml:space="preserve">
@@ -844,7 +844,7 @@
     <value>שגיאה</value>
   </data>
   <data name="ErrUpdate" xml:space="preserve">
-    <value>שגיאה: אין אפשרות להפעיל Downloader.exe. ייתכן שתוכל להפעיל אותו באופן ידני.</value>
+    <value>שגיאה: אין אפשרות להפעיל Downloader.exe. אולי אתה יכול להפעיל אותו באופן ידני.</value>
   </data>
   <data name="EstateManagerIsGod_word" xml:space="preserve">
     <value>נדל"ן Manager הוא אלוהים</value>
@@ -874,7 +874,7 @@
     <value>חלאות אדם Asset מטמון</value>
   </data>
   <data name="Failed_LAN" xml:space="preserve">
-    <value>נכשל ניסיון להתחבר לאתר אינטרנט.</value>
+    <value>נכשל נסיון להתחבר לאתר האינטרנט.</value>
   </data>
   <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
     <value>נכשל הניסיון לטעון הגדרות INI</value>
@@ -961,7 +961,7 @@
     <value>Grid שרת עם חזק</value>
   </data>
   <data name="Grid_TCP_is_set" xml:space="preserve">
-    <value>רשת TCP היציאה מוגדרת</value>
+    <value>Grid TCP היציאה מוגדרת</value>
   </data>
   <data name="Grid_UDP_is_set" xml:space="preserve">
     <value>רשת UDP Port הוא סט</value>
@@ -1099,7 +1099,7 @@
     <value>לחץ על עזרה בהגדרת Icecast</value>
   </data>
   <data name="Icecast_is_Set" xml:space="preserve">
-    <value>Icecast היציאה מוגדרת</value>
+    <value>Icecast היציאה מוגדר</value>
   </data>
   <data name="Icecast_Started" xml:space="preserve">
     <value>Icecast Started</value>
@@ -1260,23 +1260,23 @@
   <data name="LSL_Allow" xml:space="preserve">
     <value>תסריטי LSL לא יכולים להגיע של LAN PC אחר. אם תפעיל את זה, הם יכולים לגשת ליציאות ברשת המקומית על כל מחשב. זה מסוכן!</value>
   </data>
-  <data name="Make_backup" xml:space="preserve">
+  <data name="Make_a_backup_word" xml:space="preserve">
     <value>בצע גיבוי?</value>
   </data>
-  <data name="Manager God" xml:space="preserve">
+  <data name="Manager God_word" xml:space="preserve">
     <value>Manager_God</value>
-  </data>
-  <data name="Maps" xml:space="preserve">
-    <value>מפות</value>
   </data>
   <data name="Maps_Erased" xml:space="preserve">
     <value>כל אריחי המפה נמחקו. קבע את הגדרת מפת אתחול מחדש כדי ליצור מפות חדשות</value>
+  </data>
+  <data name="Maps_word" xml:space="preserve">
+    <value>מפות</value>
   </data>
   <data name="Mapx" xml:space="preserve">
     <value>מפת coords: X</value>
   </data>
   <data name="Map_Center_Location_word" xml:space="preserve">
-    <value>מפת מרכז מיקום:</value>
+    <value>מרכז מפת מיקום:</value>
   </data>
   <data name="Max4096" xml:space="preserve">
     <value>מקסימאלי של 4096</value>
@@ -1314,13 +1314,13 @@
   <data name="Max_Speed" xml:space="preserve">
     <value>מהירות מקסימלית (ברירת מחדל = 1.0)</value>
   </data>
-  <data name="Merge_OAR" xml:space="preserve">
+  <data name="Merge_OAR_word" xml:space="preserve">
     <value>משוט Merge</value>
   </data>
-  <data name="Merge_Objects" xml:space="preserve">
+  <data name="Merge_Objects_word" xml:space="preserve">
     <value>אובייקטים Merge</value>
   </data>
-  <data name="Mesh_Cache" xml:space="preserve">
+  <data name="Mesh_Cache_word" xml:space="preserve">
     <value>מטמון Mesh</value>
   </data>
   <data name="Message_sent" xml:space="preserve">
@@ -1328,9 +1328,6 @@
   </data>
   <data name="MetroOrg" xml:space="preserve">
     <value>Hypergrid.org אזור שרת</value>
-  </data>
-  <data name="MinusSign_NT" xml:space="preserve">
-    <value>-</value>
   </data>
   <data name="Minutes" xml:space="preserve">
     <value>דקות</value>
@@ -1356,8 +1353,8 @@
   <data name="MustY" xml:space="preserve">
     <value>חייב להיות זהה Y</value>
   </data>
-  <data name="Must_be_Days" xml:space="preserve">
-    <value>חייב להיות מספר ימים</value>
+  <data name="Must_be_A_Number" xml:space="preserve">
+    <value>חייב להיות מספר</value>
   </data>
   <data name="Must_PNG" xml:space="preserve">
     <value>חייב להיות קובץ PNG</value>
@@ -1474,10 +1471,22 @@
     <value>אין אזורים מוכנים, כך שלא ניתן לטעון את IAR"</value>
   </data>
   <data name="NTSuspend" xml:space="preserve">
-    <value>Error: אין אפשרות להפעיל NtSuspendProcess64.exe.</value>
+    <value>שגיאה: אין אפשרות להפעיל NtSuspendProcess64.exe.</value>
   </data>
   <data name="Num_Birds" xml:space="preserve">
     <value>מספר הציפורים לנהור</value>
+  </data>
+  <data name="NVMaxAgaents" xml:space="preserve">
+    <value>לא מספר Maximujm תקפה של סוכני ערך. חייב להיות גדול מ 0.</value>
+  </data>
+  <data name="NVMaxPrim" xml:space="preserve">
+    <value>אינו ערך מקסימאלי פרים תקף. חייב להיות גדול מ 0.</value>
+  </data>
+  <data name="NVNonPhysPrim" xml:space="preserve">
+    <value>אינו ערך שאינו פיזי פרי מקס תקף. חייב להיות גדול מ 0</value>
+  </data>
+  <data name="NVPhysPrim" xml:space="preserve">
+    <value>אינו ערך הגופן פרי מקס תקף. חייב להיות גדול מ 0.</value>
   </data>
   <data name="Oar_Files_text" xml:space="preserve">
     <value>קבצי משוט הם גיבויים של אי השלם</value>
@@ -1618,7 +1627,7 @@
     <value>התקנה הציבורית IP</value>
   </data>
   <data name="Public_Photo_Word" xml:space="preserve">
-    <value>תמונות ציבוריים</value>
+    <value>תמונות ציבוריות</value>
   </data>
   <data name="Publish_grid" xml:space="preserve">
     <value>פרסם Grid כדי Hyperica.com</value>
@@ -1674,6 +1683,18 @@
   <data name="Region_Controls" xml:space="preserve">
     <value>בקרות אזור</value>
   </data>
+  <data name="Region_Coordinate_X_cannot_be_less_than_0_word" xml:space="preserve">
+    <value>האזור לתאם X לא יכול להיות פחות מ 0</value>
+  </data>
+  <data name="Region_Coordinate_X_is_too_large" xml:space="preserve">
+    <value>אזור לתאם X גדול מדי</value>
+  </data>
+  <data name="Region_Coordinate_Y_cannot_be_less_than_32" xml:space="preserve">
+    <value>אזור לתאם Y לא יכול להיות פחות מ 32</value>
+  </data>
+  <data name="Region_Coordinate_Y_Is_too_large" xml:space="preserve">
+    <value>האזור לתאם Y גדול מדי</value>
+  </data>
   <data name="Region_Database" xml:space="preserve">
     <value>מסד האזור</value>
   </data>
@@ -1691,6 +1712,9 @@
   </data>
   <data name="Region_Names_Special" xml:space="preserve">
     <value>שם אזור לא ניתן להשתמש בתווים מיוחדים</value>
+  </data>
+  <data name="Region_name_must_not_be_blank_word" xml:space="preserve">
+    <value>שם אזור אסור להיות ריק</value>
   </data>
   <data name="Region_Overrides" xml:space="preserve">
     <value>אזור הגדרות ברירת המחדל עקיפת הגדרות ספציפיות</value>
@@ -1718,6 +1742,9 @@
   </data>
   <data name="Region_Stats" xml:space="preserve">
     <value>נתונים סטטיסטיים של אזור</value>
+  </data>
+  <data name="Region_UUID_Is_invalid_word" xml:space="preserve">
+    <value>אזור UUID אינו חוקי</value>
   </data>
   <data name="Reion_Removed" xml:space="preserve">
     <value>האזור הוסר</value>
@@ -1759,7 +1786,7 @@
     <value>אזור אחד Restart</value>
   </data>
   <data name="Restart_On_Crash" xml:space="preserve">
-    <value>אם אזור מתרסק, האזור יופעל מחדש</value>
+    <value>אם אזור מתרסק, באזור תופעל מחדש</value>
   </data>
   <data name="Restart_on_Physics_Crash" xml:space="preserve">
     <value>מחדש על קראש פיזיקה</value>
@@ -1768,7 +1795,7 @@
     <value>התרסקות פיזיקה Bulletsim יאלץ הפעלה מחדש סימולטור</value>
   </data>
   <data name="Restart_Periodically_Minutes" xml:space="preserve">
-    <value>האזורים כל יופעל מחדש אוטומטית אחרי דקות רבות כל כך פועל</value>
+    <value>האזורים כל יופעלו מחדש אוטומטית אחרי דקות רבות כל כך פועלים</value>
   </data>
   <data name="Restart_Periodically_word" xml:space="preserve">
     <value>הפעל מחדש באופן תקופתי</value>
@@ -1910,6 +1937,9 @@
   </data>
   <data name="Sequentially_text" xml:space="preserve">
     <value>כל אזור יתחיל רק לאחר באזור לפני נטען</value>
+  </data>
+  <data name="Server_Type_is" xml:space="preserve">
+    <value>סוג השרת הוא</value>
   </data>
   <data name="Server_Type_word" xml:space="preserve">
     <value>סוג השרת</value>
@@ -2277,6 +2307,9 @@
   <data name="Voice" xml:space="preserve">
     <value>קול</value>
   </data>
+  <data name="Voice_Settings_Word" xml:space="preserve">
+    <value>הגדרות קול</value>
+  </data>
   <data name="Waiting_text" xml:space="preserve">
     <value>מחכים כל האזורים ליציאה</value>
   </data>
@@ -2318,8 +2351,5 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>משהו לא בסדר עם האינטרנט</value>
-  </data>
-  <data name="Yes_word" xml:space="preserve">
-    <value>כן</value>
   </data>
 </root>
